--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -2,12 +2,15 @@ name: UI Tests
 
 on: [push]
 
+permissions:
+  contents: write
+
 jobs:
   ui-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Run UI-tests via docker-compose
         env:
@@ -23,6 +26,7 @@ jobs:
       - name: Deploy to Github Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          token: ${{ secrets.CI_TOKEN }}
           branch: gh-pages
           folder: allure-report
           clean: true
