--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,10 +18,19 @@ jobs:
           PASSWORD: ${{ secrets.PASSWORD }}
         run: |
           docker compose up --exit-code-from regression || true 
-          
+
+      - name: List allure results
+        run: ls -la allure-results
+
       - name: Generate Allure report
         run: |
-          sudo docker compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+          docker compose run \
+            -v $PWD/allure-results:/app/allure-results \
+            -v $PWD/allure-report:/app/allure-report \
+            regression /bin/sh -c "allure generate /app/allure-results --clean -o /app/allure-report"
+
+      - name: Verify report
+        run: ls -R allure-report
 
       - name: Deploy to Github Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
