--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,9 +1,6 @@
 name: UI Tests
 
-on: [push]
-
-permissions:
-  contents: write
+on: workflow_dispatch
 
 jobs:
   ui-tests:
@@ -12,27 +9,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Checkout (copy) gh-pages repository to GitHub runner
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: ./.github/gh-pages
+
       - name: Run UI-tests via docker-compose
         env:
           LOGIN: ${{ secrets.LOGIN }}
           PASSWORD: ${{ secrets.PASSWORD }}
         run: |
-          docker compose up --exit-code-from regression || true 
+          docker-compose up --exit-code-from regression || true
 
-      - name: List allure results
-        run: ls -la allure-results
+      - name: Copy history from gh-pages to allure-results
+        run: |
+          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
+          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
-          docker compose run \
-            -v $PWD/allure-results:/app/allure-results \
-            -v $PWD/allure-report:/app/allure-report \
-            regression /bin/sh -c "allure generate /app/allure-results --clean -o /app/allure-report"
+          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-      - name: Verify report
-        run: ls -R allure-report
+      - name: Update Allure history
+        run: |
+          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
 
-      - name: Deploy to Github Pages
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           token: ${{ secrets.CI_TOKEN }}
