--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
-version: '3.7'
-
 services:
   regression:
-    image: python:3.12.0a4-alpine3.17
+    image: regression:py312-alpine
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
       - ./:/usr/workspace
-    command: /bin/sh -c "ls -la && pytest -sv --alluredir=allure-results"
     working_dir: /usr/workspace
+    command: /bin/sh -lc "ls -la && pytest -sv --alluredir=allure-results"
     environment:
       - LOGIN=${LOGIN}
       - PASSWORD=${PASSWORD}
